edit readme and package.json

--- a/iloops.project
+++ b/iloops.project
@@ -1,6 +1,6 @@
 {
   "name": "default project",
-  "app_id": "app id here",
+  "app_id": "app id",
   "loops": {
     "every_type": "day",
     "every_time": "1"
