--- a/iloops.project
+++ b/iloops.project
@@ -1,6 +1,6 @@
 {
-  "name": "default project",
-  "app_id": "app id",
+  "name": "%s",
+  "app_id": "%s",
   "loops": {
     "every_type": "day",
     "every_time": "1"
