--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "%s",
-  "description": "%s for infiniteloops.co",
+  "name": "hogardulcehogar-fb",
+  "description": "Hogardulcehogar.co for infiniteloops.co",
   "version": "0.0.1",
   "main": "src/app.js",
   "author": "Infinite Loops Team",
   "license": "MIT",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node dist/app.js"
   },
   "keywords": [
-      "infiniteloops"
+    "infiniteloops"
   ],
   "contributors": [
     {
-      "name" : "Angel Botto",
-      "email" : "angelbotto@gmail.com",
-      "url" : "https://botti.co"
+      "name": "Angel Botto",
+      "email": "angelbotto@gmail.com",
+      "url": "https://botti.co"
     },
     {
-      "name" : "Michel Perez",
-      "email" : "michel.ingesoft@gmail.com",
-      "url" : "https://mrkaspa.com"
+      "name": "Michel Perez",
+      "email": "michel.ingesoft@gmail.com",
+      "url": "https://mrkaspa.com"
     }
   ],
   "repository": {
@@ -30,5 +30,14 @@
   "bugs": {
     "url": "https://github.com/infiniteloopsco/default-project/issues"
   },
-  "homepage": "https://infiniteloops.co"
+  "homepage": "https://infiniteloops.co",
+  "dependencies": {
+    "bluebird": "^2.9.33",
+    "concat": "^1.0.0",
+    "fb": "^0.7.0",
+    "gulp": "^3.9.0",
+    "gulp-coffee": "^2.3.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-watch": "^4.2.4"
+  }
 }
